--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,14 @@
-html {
-    background-color: grey;
-    min-height: 100%;
-}
+@import url(action_menu.css);
 
+html, body {
+    margin: 0;
+    padding: 0;
+    font-size: 10px;
+    background-color: #fff;
+}
 body {
+    background: none;
   font-family: Arial, sans-serif;
-}
-
-button {
-    display: block;
-    text-align: center;
-    font-size: 200%;
-    margin: 1em auto;
-    padding: .5em;
-    width: 10em;
-    max-width: 80%;
-    line-height: 1.2em;
 }
 
 h1 {
