UX : Using process tag

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url(action_menu.css);
+@import url(progress_activity.css);
 
 html, body {
     margin: 0;
@@ -30,4 +31,7 @@ h1 {
     margin:0px;
     padding:5px;
     padding-left:10px;
+}
+#waitingscreen progress {
+    margin-left: 20px;
 }
